log.txt
man/main.c:30:19: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        if(strcmp(&input,"0") == 0)
                  ^
man/main.c:34:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"1") == 0)
                        ^
man/main.c:37:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"2") == 0)
                        ^
man/main.c:40:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"3") == 0)
                        ^
man/main.c:43:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"4") == 0)
                        ^
man/main.c:46:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"5") == 0)
                        ^
man/main.c:49:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"6") == 0)
                        ^
man/main.c:52:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"7") == 0)
                        ^
man/main.c:55:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"8") == 0)
                        ^
man/main.c:58:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"9") == 0)
                        ^
man/main.c:61:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"+") == 0)
                        ^
man/main.c:64:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"-") == 0)
                        ^
man/main.c:67:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"*") == 0)
                        ^
man/main.c:70:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"/") == 0)
                        ^
man/main.c:73:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"C") == 0)
                        ^
man/main.c:76:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,".") == 0)
                        ^
man/main.c:79:25: error: Invalid strcmp() argument nr 1. A nul-terminated string is required. [invalidFunctionArgStr]
        }else if(strcmp(&input,"=") == 0)
                        ^
man/main.c:28:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s", &input);
        ^
man/printUtils.c:24:9: style: The scope of the variable 'count' can be reduced. [variableScope]
    int count;
        ^
man/printUtils.c:27:18: style: Variable 'fmt' is assigned a value that is never used. [unreadVariable]
    char fmt[10] = "%.5f";
                 ^
man/main.c:10:0: style: The function 'Init' is never used. [unusedFunction]

^
gen/kcg_types.c:23:0: style: The function 'kcg_comp_array_char_254' is never used. [unusedFunction]

^
gen/kcg_types.c:9:0: style: The function 'kcg_comp_array_char_255' is never used. [unusedFunction]

^
man/memcpy.c:8:0: style: The function 'memcpy' is never used. [unusedFunction]

^
gen/root_Calc.c:160:0: style: The function 'root_reset_Calc' is never used. [unusedFunction]

^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

